navbar context menu overflow bug fixed

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -29,14 +29,10 @@
 }
 
 body {
-  /* width: 100%; */
   min-height: 100vh;
   color: var(--text-color);
   background: var(--background-color);
-  /* transition:
-    color 0.5s,
-    background-color 0.5s;
-  line-height: 1.6; */
+  overflow: hidden;
   font-family:
     Inter,
     -apple-system,
