--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -53,9 +53,6 @@
   align-items: center;
   flex-grow: 1;
 }
-/* #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
-} */
+#app {
+  overflow: hidden;
+}
